# selfwork-functions-calling

./: .env.example  .gitignore  README.md  pyproject.toml
weather/: __init__.py  tools.py
