[project]
name = "selfwork-functions-calling"
version = "0.1.0"
description = "Servizio meteo con OpenAI function calling"
authors = [
    {name = "Albo"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai (>=2.36.0,<3.0.0)",
    "chainlit (>=2.11.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
